Changelog
---------
The UFTP issue tracker is at
https://sourceforge.net/p/unicore/uftp-issues

UFTPD 3.1.3 (released MMM DD, 2022)
-----------------------------------
 - fix: ignore upper/lower case when parsing ACL and matching DNs
 - fix: server could hang when ACL contains typos
 - fix: log common name of connecting server when access is denied

UFTPD 3.1.2 (released Dec 16, 2021)
-----------------------------------
 - improvement: support credential as separate key and
   certificate files specified by the 'credential.key' and
   'credential.certificate' properties
 - fix: reply for checksum of files with length zero gave "-1"
   as the last byte

UFTPD 3.1.1 (released Dec 8, 2021)
-----------------------------------
 - new feature: HASH command to get file checksums (#70)
 - fix: cleanup child processes forked in get_user_info()

UFTPD 3.1.0 (released Oct 27, 2021)
------------------------------------
 - improvement: allow to run as unprivileged user with added
   setuid/setgid capabilities via 'setpriv' or similar tool
 - fix: getting a file that exists but is not readable does
   not result in the right error message (#68)
 - fix: STOR without previous RANG command should truncate 
   the file before writing
 - fix: in a "restricted" session, check access permission using
   absolute paths of files

UFTPD 3.0.4 (released Sept 13, 2021)
------------------------------------
 - fix: ACL parsing for DNs with '/' (#66)
 - fix: UFTPD fails when user's home does not exist

UFTPD 3.0.3 (released July 2, 2021)
-----------------------------------
 - fix: writing file chunks was buggy
 
UFTPD 3.0.2 (released May 27, 2021)
-----------------------------------
 - fix: read user keys after privilege drop to avoid
   issues with root-squash filesystems
 - fix: implement rename (RNFR, RNTO)
 - fix: implement append (APPE) and writing to an
   existing file with offset

UFTPD 3.0.1 (released May 10, 2021)
----------------------------------