@@ -1,10 +1,21 @@
 # PyUFTPD
 
-The UFTPD server, implemented in Python 3
+This repository contains the source code for the
+UFTPD server, implemented in Python 3
 
-UFTPD is the file server, for a full UFTP system you'll also need
-an Auth server and/or UNICORE/X which deals with user authentication.
+UFTPD is the file server of the full UFTP system. For using it,
+you'll also need an Auth server (or UNICORE/X) which deals
+with user authentication.
 
-Download pre-built binaries from 
-https://sourceforge.net/projects/unicore/files/Servers/UFTPD/
+## Download
 
+Working binaries can be 
+[downloaded from SourceForge](https://sourceforge.net/projects/unicore/files/Servers/UFTPD)
+
+## Documentation
+
+See the [UFTPD server manual](https://uftp-docs.readthedocs.io/en/latest/admin-docs/uftpd/index.html)
+
+## Building
+
+Use the provided Makefile to create installable binaries.
